--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -165,7 +165,7 @@ The surface roughness of a selection of low density plastic targets were analyse
 % TODO confirm I can include the PMMA scan from TFAB
 
 \subsection{Contrast and plasma mirrors}
-As illustrated in Figure \ref{fig:orioncad}, a plasma mirror optic is included before the main target to improve the contrast of the SP2 beamline. HYADES simulations of the effect of this optic are detailed in Section \ref{sec:orion-hydro}. The distance between the PM and the main target is \qty{15}{mm}, thus the beam diameter at the PM is $\approx 15/(f/3) = \qty{5}{mm}$ and the intensity on PM can be calculated. Provided the harmonic beam divergence is less than or equal to the $f/3$ cone, as is anticipated, the harmonic beam should not be clipped by the PM in this setup. 
+As illustrated in Figure \ref{fig:orioncad}, a plasma mirror optic is included before the main target to improve the contrast of the SP2 beamline \cite{doumyCompleteCharacterizationPlasma2004}. HYADES simulations of the effect of this optic are detailed in Section \ref{sec:orion-hydro}. The distance between the PM and the main target is \qty{15}{mm}, thus the beam diameter at the PM is $\approx 15/(f/3) = \qty{5}{mm}$ and the intensity on PM can be calculated. Provided the harmonic beam divergence is less than or equal to the $f/3$ cone, as is anticipated, the harmonic beam should not be clipped by the PM in this setup. 
 %TODO calculate that intensity and show it is where it should be.
 
 The intention was to use \ac{AR}-coated fused silica optimised for \qty{45}{\degree} \ac{AOI} and the SP2 pulse wavelength (BCP45R) \cite{45AOIBeamsplitter}. This has a reflectance of \qty{0.398}{\%} at $\lambda_\mathrm{L} = \qty{1053}{nm}$ for unpolarised light. Unfortunately the debris from the PM caused damage to the parabola. For the second SP2 shot, the high reflectivity fused silica PM was replaced with a thin foil of silicon nitride. The reduction in available material of the thin foil reducing the risk of damaging debris. At \qty{45}{\degree} \ac{AOI}, $\lambda = \qty{1.053}{\mu m}$ and $\phi_2 = \qty{16.4}{\degree}$, the silicon nitride PM pre-switch-on has a reflectivity of \qty{5.55}{\%} \cite{polyanskiyRefractiveindexInfoDatabase2024}. One can assume its behaviour after switch-on is consistent with the other PM since it is simply a plasma interaction now.
@@ -175,6 +175,8 @@ The intention was to use \ac{AR}-coated fused silica optimised for \qty{45}{\deg
 The ORION SP1 and SP2 spot size was routinely monitored on shot by the AWE laser team via two X-ray pinhole cameras and the time-integrating Kirkpatrick-Baez X-ray microscope (KBXRM) diagnostic, sat on the target chamber Port 21 and pointed at the notional \ac{TCC}. This reflective X-ray microscope optic has a ten times magnification and spatial resolution of \qty{15}{\mu m}, comfortably resolving the laser spot size. Images were again recorded with TR-type IP. While direct mapping between the recorded images and real laser irradiance profiles is a highly non-trivial problem with any proposed model depending strongly on the assumptions made. However, by making the very reasonable assumption of spatial and temporal blurring of the spot size in the X-ray image due to electron transport away from the laser spot, clearly the measured spot size will be an upper bound on the real spot size. It follows that the upper bound on optical spot widths corresponds to a lower limit of irradiance (since the on shot energy is well-defined). These diagnostics determine sensible upper bounds for the laser spot size are \qty{20}{\mu m} and \qty{10}{\mu m} for the SP1 and SP2 beamlines respectively.
 
 \section{\label{ch:3-sec:theory}Theory}
+Note: in the below all we are simply saying is the reflected field is simply the negative of the incoming field with a phase modulation \cite{derbruggeEnhancedRelativisticHarmonics2010}. See also this paper for a simle explanation of OMM
+
 For the moderately relativistic sub-picosecond ORION SP1 and SP2 beamlines the most appropriate description of their non-linear interaction with a solid density target is the Relativistic Oscillating Mirror (ROM) model. The full mathematical formation of which forms the main body of Baeva's 2008 thesis \cite{baevaHighHarmonicGeneration2008}, a notably more rigorous derivation than her original paper on the same topic \cite{baevaTheoryHighorderHarmonic2006}, applying the highly general Apparent Reflection Point formulism to the case of $S>1$ in relativistic similarity theory, showing that it coincides with the motion of the relativistic critical density surface. The following covers the more qualitative, physically motivated understanding of why this theory works, which is fundamentally that while the surface motion is generally complex and parameter space dependent, at the important point the surface motion is always parabolic. By application of the Bourdier method, Baeva demonstrated that the envelope of the spectral content of the reflected beam does not deviate from the normal incidence linearly polarised case for either s- or p-polarised incidence. Thus the following discussion will be restricted to normal incidence. One starts with relativistic similarity theory and Equation \ref{{eq:intro-p_similarity}}, $\mathbf{p} \sim a_0$. As discussed in Section \ref{sec:zvp-intro}, microscopically electrons follow similar relativistic trajectories yet from Equation \ref{eq:zvp-vprop}, $v_\mathrm{prop}$, the velocity of electrons along the propagation axis of the laser pulse, not necessarily relativistic except at the passing of the zero of the vector potential where $v_\mathrm{prop} \to c$. Macroscopically, the well-defined critical density surface within the skin depth (located at $S =1$), has a gamma factor that tracks the electrons' velocity along the propagation direction ($x$-direction) at that point,
 \begin{equation}\label{eq:orion-gamma_s}
 	\gamma_\mathrm{s} = \frac{1}{\sqrt{1-v_\mathrm{prop}^2/c^2}} = \sqrt{ \frac{1 + a(t,x)^2 +  p_\mathrm{prop}^2/(m_\mathrm{e}c)^2}{1 + a(t,x)^2}}.
@@ -417,7 +419,9 @@ Include plots and fits for near roll off.
 
 \section{\label{ch:3-sec:simulations}Simulations}
 \subsection{1D PIC simulations of HHG}
-Numerical simulations of the SP1 and SP2 interactions with CVD and PMMA were performed using the Smilei PIC code to confirm the results of the previous section for ORION beamline parameters. Application of the Bourdier method (plasma initialised streaming at $\mathbf{v}= c\sin\theta \mathbf{\hat{y}}$) enabled the accurate and computationally efficient reconstruction of the interactions in 1D, a necessity for the sub-ps ORION laser pulse duration. Despite the 1D geometry and optimised supercomputer architecture, resolution numerical heating and noise remained a serious issue. Edwards and Mikhailova noted for their single laser pulse cycle simulations that the highest resolved harmonic required 10 cells per wavelength and up to 5000 particles per cell was necessary for their noise requirements \cite{edwardsXRayEmissionEffectiveness2020} while numerical heating scales linearly with time. The fourth interpolation order for the particle shape function was found to be an efficient choice for the minimisation of numerical heating.
+Numerical simulations of the SP1 and SP2 interactions with CVD and PMMA were performed using the Smilei PIC code to confirm the results of the previous section for ORION beamline parameters. Application of the Bourdier method (plasma initialised streaming at $\mathbf{v}= c\sin\theta \mathbf{\hat{y}}$) enabled the accurate and computationally efficient reconstruction of the interactions in 1D, a necessity for the sub-ps ORION laser pulse duration. Despite the 1D geometry and optimised supercomputer architecture, resolution numerical heating and noise remained a serious issue. Edwards and Mikhailova noted for their single laser pulse cycle simulations that the highest resolved harmonic required 10 cells per wavelength and up to 5000 particles per cell was necessary for their noise requirements \cite{edwardsXRayEmissionEffectiveness2020} while numerical heating scales linearly with time. The fourth interpolation order for the particle shape function was found to be an efficient choice for the minimisation of numerical heating when the Debye length is not resolved.
+
+%TODO discuss how there are three sources of potential error: statistical noise from macro particles (interestingly I think this can also affect numerical heating), numerical heating from Debye length not being resolved and must resolve wavelengths of interest.
 
 Fortunately, to make comparisons to the derivations of Section \ref{ch:3-sec:theory} only a low resolution is necessary. Simulation parameters are detailed in Table \ref{tab:orion-parameters}. 
 \begin{table}[]
@@ -810,6 +814,7 @@ These findings are highly significant.
 Then write up the new peak intensity and the efficiencies.
 Comment on flying focus
 
+% TODO reference beam on Vulcan, it was 2 orders of magnitude above background from brems, thus we can assume above brems even if beam more divergence than ORION (would need to be 10 times as divegent)
 
 % TODO Additional things: approximate reflectivity of the plasma mirror at switch on, merging of harmonics at the X-ray regime
 % TODO describe KBRXM diagnostic 
