--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -103,31 +103,72 @@ for diffraction order, $n$, incident wavelength, $\lambda$, distance between cry
 This will be attempted using the \ac{BBXRD} placed in the path of the specularly reflected beam roughly 50 cm from the target. This lead shielded box contains the crystal sample with image plate lining the inner walls. A hole allows the harmonic beam into the box. Placed at an angle on a rotatable washer enables a range of angles and corresponding energies to be investigated. Starting with quartz to investigate the photon energies of 1.7 - 2.5 keV and moving to silicon to explore energies of 2.4 - 3.3 keV. The IP must be shielded to reject laser light, beryllium would be most suitable. It may be necessary to integrate over many shots to produce the Laue spot.
 
 \section{Contrast}
-Before this section discuss HHG optima and write: 
-% TODO add extra citations
 
+\subsection{Contrast intro}
+% TODO move this elsewhere and add to HHG optima discussion
 High power laser systems have inherent prepulses of ionising intensities. This preheats a target leading to thermal expansion prior to arrival of the main pulse, producing an exponential preplasma, $n_\mathrm{e} \sim e^{x/L}$. HHG is exceedingly sensitive to this preplasma formation and has evolked particular interest in the field \cite{behmkeControllingSpacingAttosecond2011, rodelHarmonicGenerationRelativistic2012, dollarScalingHighorderHarmonic2013, kahalyDirectObservationDensityGradient2013, vincentiAchievingExtremeLight2019,behmkeControllingSpacingAttosecond2011} with both simulation and experimental evidence. While there is some variation in optimal values, optima are typically small with respect to the laser wavelegnth, with scale lengths, $L \approx 0.1 \lambda_\mathrm{L}$. The difficulty in measuring such small lengths perhaps going some of the way to explain the variety of suggested optima. 
 
 For very short preplasma scale lengths \ac{CWE} dominates over HHG. Kahaly \textit{et al} demonstrated in experiment harmonic emission varied smoothly with reducing laser contrast from the CWE regime to the HHG regime to HHG suppression \cite{kahalyDirectObservationDensityGradient2013}. As can be understood increasing the preplasma scale length increases the amplitude of surface oscillations, increasing HHG production, however, there reaches point where parametric instabilities in the underdense region begin to dominate \cite{dollarScalingHighorderHarmonic2013}.
 
 The use of 1D hydrodynamic codes to measure prepulses from laser contrast trace measurements has become standard practice \cite{behmkeControllingSpacingAttosecond2011, dollarScalingHighorderHarmonic2013, liExperimentalDemonstrationEfficient2022}, however this shall be called into question in the following.
 
-Fortunately there are several approaches to control various aspects of hte process of preplasma expansion. Plasma mirrors are effective tools for increasing laser contrast. These single use optics typically have an \ac{AR} coating of reflectivity $R_1$. As the laser fluence passes the damage threshold of the optic, plasma forms on the front surface. The laser is focused onto the optic such that only the main pulse will ionise the optic, leading to a high reflectivity $R_2$ when `switched-on'. The \ac{PM} therefore ups the contrast by a factor $R_2/R_1$. The heating effect of the prepulse can be reduced by reducing the angle of incidence or the prepulse itself can be reduced by reducing the intensity of the beam through apodisation or use of a frequency doubling crystal. A secondary beamline can generate a controllable prepulse \cite{kahalyDirectObservationDensityGradient2013}, the surface can be recompressed using a circularly polarised prepulse that will cause minimal heating \cite{liExperimentalDemonstrationEfficient2022}.
-
-
-An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform. Harmonics have only been observed on GEMINI PW for normal incidence \cite{dromeyCoherentSynchrotronEmission2013}. The only parameter that has been shown to suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013}. 
-
-
-
-\subsubsection{Preplasma scale lengths and prepulse control}
-Observation of the ZVP mechanism requires a sufficiently steep density gradients at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup prior to the main interaction \cite{doumyCompleteCharacterizationPlasma2004}. Investigation of preplasma generation will occur in parallel to the main experimental goals.
-
-Contrast DPM, GEMINI issues, probe beam, potential solutions, contingency (currently in Resolve X-ray HHG section)
+Fortunately there are several approaches to control various aspects of hte process of preplasma expansion. Plasma mirrors are effective tools for increasing laser contrast. These single use optics typically have an \ac{AR} coating of reflectivity $R_1$. As the laser fluence passes the damage threshold of the optic, plasma forms on the front surface. The laser is focused onto the optic such that only the main pulse will ionise the optic, leading to a high reflectivity $R_2$ when `switched-on'. The \ac{PM} therefore ups the contrast by a factor $R_2/R_1$. There is a balancing act in choosing the peak intensity on the \ac{PM}. Too low and switch on occurs too late and $R_2$ is reduced. Too early and the PM will switch on before the arrival of the main pulse. A peak intensity around \qty{1e16}{W.cm^{-2}} is optimum \cite{caiTimeresolvedMeasurementsReflectivity2009}. PMs can also acts as a low-pass spatial filter, improving the quality of the focal spot on target \cite{doumyCompleteCharacterizationPlasma2004}. The heating effect of the prepulse can be reduced by reducing the angle of incidence or the prepulse itself can be reduced by reducing the intensity of the beam through apodisation or use of a frequency doubling crystal. A secondary beamline can generate a controllable prepulse \cite{kahalyDirectObservationDensityGradient2013}, the surface can be recompressed using a circularly polarised prepulse that will cause minimal heating \cite{liExperimentalDemonstrationEfficient2022}. Alternatively, the intensity on PM can be reduced, again costing in the peak intensity of the main pulse interaction.
 
 
 
 
-In this initial stage we will use a UV spectrometer. As of 2019, no experiment to confirm HB theory had been performed on a PW system \cite{vincentiAchievingExtremeLight2019}. These UV spectrometer measurements could be very interesting both to confirm the HB theory in the PW regime and to infer the intensity increase at PM focus, for this we would ideally resolve the first 50 orders.
+\subsection{Contrast on GEMINI PW}
+% Observation of the ZVP mechanism and HHG production requires a sufficiently steep density gradients at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup prior to the main interaction \cite{doumyCompleteCharacterizationPlasma2004}. Investigation of preplasma generation will occur in parallel to the main experimental goals.
+
+An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. The only parameter that has been shown to suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition is rapid \cite{kahalyDirectObservationDensityGradient2013}.
+
+The last available contrast measurements of the GEMINI PW laser are presented in Figure \ref{fig:geminicontrast}. 
+\begin{figure}
+	\centering
+	\includegraphics{figures/gemini/gemini_contrast}
+	\caption[Native contrast of the GEMINI PW laser system.]{Native contrast of the GEMINI PW laser system measured using the Sequoia third order autocorrelator scans. The noise floor of the detector is $\approx 1\times 10^{-9}$. The resolution is 100 fs, thus the main pulse is not resolved by the detector.}
+	\label{fig:geminicontrast}
+\end{figure}
+The \ac{DPM} setup improves the contrast by at least $10^5$, improving the contrast a few ps out to $10^9$. That is consistent with a double AR coating plus the peak measured reflectivity of \qty{50}{\%}, consistent with two AR coated PMs each with reflectivity $\approx$ \qty{0.5}{\%} when switched off and \qty{70}{\%} when switched on. More recent measurements of the GEMINI PW DPM system have found a reflectivity of \qty{1.23e-4}{\%} pre switch on and \qty{60}{\%} after, corresponding to a contrast enhancement of \num{4.88e5}. Note that the DPM setup includes an acetate debris shield, without which shot quality quickly degrades from plasma ablation.
+
+HYADES simulations of the GEMINI PW pulse demonstrate acceptable preplasmas. 
+% TODO include plot of preplasma from HYADES.
+Note in Figure \ref{fig:geminicontrast} the early switch on of the plasma mirror system. For a peak intensity on \ac{PM} of \qty{1e16}{W.cm^{-2}}, this switch on occurs an order of magnitude below typical ionising intensities \cite{umstadterRelativisticLaserPlasma2003}. Early PM switch ons is nothing new \cite{caiTimeresolvedMeasurementsReflectivity2009}, however, it points to a serious issue. Such early switch ons cannot be described by the basic theory nor hydrodynamic simulation. Perhaps all can be explained by the complex interaction of the laser pulse with the AR coating. Indeed perhaps the very optic deemed to save us is our great enemy in the battle for harmonics. Yet still the hydrodynamic codes fail us. 
+
+While there exists established theories on the operation of plasma mirrors, these are based on fairly large assumptions that remain untested. Given the notoriety of the challenge of observing SHHG despite laser contrast being relatively well understood and the general successes attributed to hydrodynamic codes, it seems quite possible that these large assumptions are the critical concern. They could also be responsible for the range of optimal scale lengths observed in experiments. Recent work from MY and BD has shown evidence of the propagation of an opacity front into a target due to laser prepulse prior to ionisation and plasma formation. Such a transition from transparency will dramatically affect laser pulse energy deposition into the target leading to significantly earlier plasma mirror `switch on' times. The interaction appears to occur over roughly 3 ps, a timescale to which preplasma scale length is highly sensitive. Note that such an interaction would be impossible to simulate given the multiple scales upon which preplasma formation occurs and the complexity of the transition to opacity. The GEMINI experiment, however, provides an excellent opportunity to probe this process in parallel to the main experimental goals.
+
+A simple model for opacity generation. A totally pure fused silica target consists of valence and conduction bands only. Electrons are excited to the conduction band by the laser and then simply drop back down again. As impurities are added to the target, the band structure becomes more complex and electrons can drop to intermediate states from which they cannot then return easily to the ground state. Thus, more energy can be absorbed and the transition to opacity occurs at earlier times.
+
+Hence, the more pure a silica target, the later the transition to opacity and the smaller the preplasma scale length. This also suggests switching out the first plasma mirror for a pure uncoated silica target could also improve contrast where it matters. Since we are fairly assured the DPM removes all ns prepulse pedestal, it seems likely it is the ps prepulse pedestal that is causing issue. Now PM1 deals with the ps pedestal (with the later switch on) and PM2 the ns pedestal (with the AR coating). Again this is a simple test where we compare optimum prepulse delay times.
+
+Presumably this early plasma formation also occurs for Vulcan or ORION targets, however, once relativistic intensities are accessed, recompression of the target will occur. For these long pulse durations there is sufficient time for steepening before the main interaction. Note that contrast reduction is even more relevant for next-gen laser facilities where a $10^-4$ contrast is already relativistic! Dramatically affecting interactions. Furthermore, ion acceleration via TNSA of nanometre foil targets is a very popular use case of high power short pulse laser systems. Such next-gen systems absolutely require excellent contrast so if we can demonstrate contrast enhancement where it really matters using the DPM adjustments, that will be very interesting.
+
+To investigate early plasma switch on, a \qty{50}{ps} chirped probe beam will be focused on target. Optical spectrometers in transmission and reflection should identify opacity and plasma generation times respectively. This measurement could categorically demonstrate the failure of hydrodynamic codes for any preionisation laser pulse intensities. One may wonder that such a failure not identified in other branches of HED physics, such as the case of Inertial Confinement Fusion. It is simply a matter of scales. These effects are only relevent for the few femtosecond petawatt laser system in this case of high sensitivity to preplasma scale length.
+% TODO look into cold opac in hydro code
+To distinguish the probe beam from the bright non-linear target interaction, it will be focused onto the interaction area out of the main interaction plane and with opposite polarisation.
+
+
+
+
+
+\subsubsection{Strategy}
+For this initial stage, the OHREX will be replaced with a XUV spectrometer since only the lowest orders will likely be visible. As of 2019, no experiment to confirm HB theory had been performed on a PW system \cite{vincentiAchievingExtremeLight2019}. These UV spectrometer measurements could be very interesting both to confirm the HB theory in the PW regime and to infer the intensity increase at PM focus. The first step will be to perform a scan around the focal spot of the laser. Wavefront curvature at the target from slight defocussing can reduce divergence from hole boring thus increasing intensity levels at the detector while also reducing  pre-heating. The next action will be to apodise the beam, again this reduces the intensity on target and the harmonic beam divergence and has been shown to tip preplasma scale length into the optimal regime for HHG \cite{kahalyDirectObservationDensityGradient2013}.
+
+This will reduce the intrinsic prepulse intensity by the same factor as the main pulse. To ensure the SHHG roll off is above the 2.4 keV harmonics (such that the signal on OHREX is non-negligible), we require $a_0 > 8$. Such apodisation would reduce the prepulse by roughly 10 times. Note that (assuming top hat beam profile at near field) for apodisation of a beam from radius $r$ to $r'$, the beam energy reduces by a factor $(r'/r)^2$ while the spot size increases by a factor $r/r'$, thus the peak intensity reduces by a factor $(r'/r)^4$, $a_0 =8$ corresponds roughly to $r'/r = 0.5$. Apodising can also help remove higher spatial orders, improving the spot at focus. While harmonics were observed on the 1 J precursor to GEMINI PW, Astra-Gemini, apodising back to Astra-Gemini parameters does not guarantee success, the new front end leads to a new unique prepulse profile.
+
+One can also reduce the intensity on DPM leading to later switch on times but a lower peak reflectivity. Failing that, there are more drastic measures available. First, a second target chamber layout has been designed that will reduce the angle of incidence on target to \qty{30}{\degree} and second, frequency doubling is known to significantly enhance contrast. In fact as with ORION it is likely we go straight to overshooting. 
+
+This would be very useful for demonstrating the validity of contrast theory. The frequency doubling crystal available at GEMINI PW leads to an intensity reduction both from efficiency (\qty{25}{\%}) and apodisation (\qty{9}{\%}) (the crystal has a diameter of 60 mm), therefore if there is an improvement in signal, it must be from the improvement to contrast. While Kahaly \textit{et al} were able to observe harmonics for a beam apodised to $a_0 = 0.7$ provided the scale length was optimised, resorting to this method to produce harmonics would preclude the X-ray harmonic part of the experiment due to the reduction in intensity on target, however, it would justify the investment into a larger frequency doubling crystal for future HHG experiments at GEMINI PW. Note that despite inevitability of efficiency cost due to the frequency doubling process, similar intensities on target could be realised provided a 25 \% efficiency non-apodising frequency doubling crystal. This is since you no longer need the DPM and you can focus to a smaller spot. Thus this could absolutely be a future route. However, such an optic would probably cost 100k so we need a good justification, this experiment could be just that.
+
+Once harmonics are visible, aspects of the system can be changed and the opacity and early switch on hypotheses can be tested by looking for quantitative improvements to the signal. Replacing the pure fused silica target with impure BK7 or AR-coated targets should reduce the harmonic signal. Equally, replacing the first PM in the DPM chain with an uncoated PM should delay the PM switch on and potentially improve the signal. Note that the CWE signal is distinguishable from the HHG signal: it is more divergence and cuts off after the plasma frequency \cite{kahalyDirectObservationDensityGradient2013}.
+
+
+
+\subsection{Kahaly mirror}
+At some point, the signal will overshoot and enter the CWE regime, preferably early in the list of contingencies presented, and the preplasma scale length can now be optimised. A simple but elegant way to do this was detailed by Kahaly \textit{et al} \cite{kahalyDirectObservationDensityGradient2013}. Simply partially cover a mirror in the laser chain with a small mirror. One can control the difference in path length of light on this mirror by the mirror thickness and distance from the main laser mirror, thus producing a controllable prepulse. Since one has effectively apodised the beam, the parabola will then focus the prepulse spot to a larger area compared to the main pulse spot creating a uniform preplasma across the main spot while the diffraction limited main spot will have little aberration due to the subtracted prepulse. By routinely imaging the spot one can adjust the prepulse mirror angle to ensure the prepulse spot coincides with the main pulse spot. The mirror should have a mirrored back surface and an AR coated front surface with a slight angle between the two faces to prevent a parasitic prepulse.
+
+Kahaly \textit{et al} demonstrate a linear relationship between main pulse delay relative to prepulse and scale length (due to more time for the preplasma to expand) but also note that for the same scale length, a larger delay (accompanied by a smaller energy in prepulse) produces higher quality harmonics. This could be understood as a natural consequence the lower plasma temperatures, which improve the ability of the system to perform coherent SHHG behaviour. If we access harmonics using the Kahaly method, we could attempt to improve our signal by moving the prepulse mirror further from the main pulse mirror while also reducing the fraction of overlap between the two (reducing the prepulse energy). The Kahaly mirror should be placed before the final mirror. The further back in the chain it is placed, diffraction from the mount can cause greater danger.
+
 
 
 \section{Beyond GEMINI PW}
@@ -140,10 +181,6 @@ Image the XUV harmonics from the attosecond electron bunches.
 Write about PIC simulations here.
 
 Measuring the HHG from attosecond electron bunches.
-
-
-\section{Conclusion}
-
 
 
 
